--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fais",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "engines": {
     "node": ">=10.0.0"
   },
@@ -33,5 +33,8 @@
     "url": "https://github.com/Ekbal41/Fais.git"
   },
   "license": "MIT",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "nunjucks": "^3.2.4"
+  }
 }
